add app screen preview

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div id="app-preview">
         <div id="smartphone">
-            
+            <img src="./images/app-screen.png" alt="" id="app-screen">
         </div>
     </div>
     <section id="description">
@@ -24,7 +24,7 @@
         <br>
         <span id="app-subtitle">Da Inteligência Humana<br>à Inteligência Artificial</span>
         <br><br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sed aliquet nunc. Proin mattis dignissim justo, quis laoreet velit bibendum sed.</p>
+        <p>Aqui vai a descrição do aplicativo... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sed aliquet nunc. Proin mattis dignissim justo, quis laoreet velit bibendum sed.</p>
         
     </section>
     <section id="download">
