change page colors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="title">
         <img src="./images/logo.png" alt="logo" id="logo">
-        <span>Nhande Arandú</span>
+        <span>NHANDE ARANDÚ</span>
     </div>
     <div id="motto">
         <span>Compartilhar<br>ciência é mais<br>ciência.</span>
@@ -21,17 +21,15 @@
     </div>
     <section id="description">
         <span id="app-title">Nhande Arandú:</span>
-        <br>
         <span id="app-subtitle">Da Inteligência Humana<br>à Inteligência Artificial</span>
-        <br><br>
+        <br>
         <p>Aqui vai a descrição do aplicativo... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sed aliquet nunc. Proin mattis dignissim justo, quis laoreet velit bibendum sed.</p>
-        
     </section>
-    <section id="download">
+    <section id="download-section">
         <div id="download-btns">
             <a href="https://play.google.com/store/apps/details?id=com.supercell.clashroyale">
                 <div id="android-download-btn" class="download-btn">
-                    <img src="./images/android-6-256.png" alt="os-img" class="os-img">
+                    <img src="./images/play-store.png" alt="os-img" class="os-img">
                         <span>
                             <p class="download-in-txt">baixar na</p>
                             <p class="os-store">Play Store</p>
@@ -51,7 +49,9 @@
         <div id="img-container">
             <img src="./images/d-circuit.png" alt="" id="circuit-img">
         </div>
-        
     </section>
+    <a href="">
+        <p id="privacy-policy">Política de privacidade</p>
+    </a>
 </body>
 </html>
