add page decorations and change colors

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <div id="title">
+        <div id="top-line"></div>
+        <div id="triangle-1"></div>
         <img src="./images/logo.png" alt="logo" id="logo">
         <span>NHANDE ARANDÚ</span>
     </div>
     <div id="motto">
-        <span>Compartilhar<br>ciência é mais<br>ciência.</span>
+        <p>Promover ciência</p>
+        <p> = mais ciência.</p>
+        <div id="triangle-2"></div>
     </div>
     <div id="app-preview">
         <div id="smartphone">
@@ -20,14 +24,15 @@
         </div>
     </div>
     <section id="description">
+        <div id="triangle-3"></div>
         <span id="app-title">Nhande Arandú:</span>
         <span id="app-subtitle">Da Inteligência Humana<br>à Inteligência Artificial</span>
         <br>
-        <p>Aqui vai a descrição do aplicativo... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sed aliquet nunc. Proin mattis dignissim justo, quis laoreet velit bibendum sed.</p>
+        <p>Esta exposição surge da necessidade e vontade de espalhar o conhecimento científico e tecnológico na educação básica, buscando criar um relacionamento amigável e proveitoso entre jovens estudantes, ciência e tecnologia.<br><br>Baixe nosso aplicativo gratuitamente para saber mais!</p>
     </section>
     <section id="download-section">
         <div id="download-btns">
-            <a href="https://play.google.com/store/apps/details?id=com.supercell.clashroyale">
+            <a href="">
                 <div id="android-download-btn" class="download-btn">
                     <img src="./images/play-store.png" alt="os-img" class="os-img">
                         <span>
@@ -36,7 +41,7 @@
                         </span>
                 </div>
             </a>
-            <a href="https://apps.apple.com/br/app/clash-royale/id1053012308">
+            <a href="">
                 <div id="ios-download-btn" class="download-btn">
                     <img src="./images/apple-256.png" alt="os-img" class="os-img">
                     <span>
@@ -53,5 +58,10 @@
     <a href="">
         <p id="privacy-policy">Política de privacidade</p>
     </a>
+    <div id="bottom-decoration">
+        <div id="bottom-triangle"></div>
+        <div id="bottom-line"></div>
+    </div>
+    
 </body>
 </html>
