fix motto and description

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div id="motto">
         <p>Promover ciência</p>
-        <p> = mais ciência.</p>
+        <p>= mais ciência.</p>
         <div id="triangle-2"></div>
     </div>
     <div id="app-preview">
@@ -28,7 +28,7 @@
         <span id="app-title">Nhande Arandú:</span>
         <span id="app-subtitle">Da Inteligência Humana<br>à Inteligência Artificial</span>
         <br>
-        <p>Esta exposição surge da necessidade e vontade de espalhar o conhecimento científico e tecnológico na educação básica, buscando criar um relacionamento amigável e proveitoso entre jovens estudantes, ciência e tecnologia.<br><br>Baixe nosso aplicativo gratuitamente para saber mais!</p>
+        <p>Esta exposição surge da necessidade e vontade de espalhar o conhecimento científico e tecnológico na educação básica, buscando criar um relacionamento amigável e proveitoso entre jovens estudantes, ciência e tecnologia.<br><br>Para saber mais, baixe nosso aplicativo.<br>É de graça!</p>
     </section>
     <section id="download-section">
         <div id="download-btns">
