update: refatora os triangulos e move estilos gerais para "style.css"

--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/mobile_style.css">
+    
     <title>Nhande Arandú: Da Inteligência Humana à Inteligência Artificial</title>
 </head>
 <body>
     <div id="title">
         <div id="top-line"></div>
-        <div id="triangle-1"></div>
+        <div id="triangle-1" class="triangle deg0"></div>
         <img src="./images/logo.png" alt="logo" id="logo">
         <span>NHANDE ARANDÚ</span>
     </div>
     <div id="motto">
         <p>Promover ciência</p>
         <p>= mais ciência.</p>
-        <div id="triangle-2"></div>
+        <div id="triangle-2" class="triangle deg180"></div>
     </div>
     <div id="app-preview">
         <div id="smartphone">
@@ -24,7 +26,7 @@
         </div>
     </div>
     <section id="description">
-        <div id="triangle-3"></div>
+        <div id="triangle-3" class="triangle deg0"></div>
         <span id="app-title">Nhande Arandú:</span>
         <span id="app-subtitle">Da Inteligência Humana<br>à Inteligência Artificial</span>
         <br>
@@ -59,7 +61,7 @@
         <p id="privacy-policy">Política de privacidade</p>
     </a>
     <div id="bottom-decoration">
-        <div id="bottom-triangle"></div>
+        <div id="bottom-triangle" class="triangle deg180"></div>
         <div id="bottom-line"></div>
     </div>
     
