add: cria estilização para o desktop e modifica o html para isso
Cria secção/divisões no html para poder manipular de uma forma melhor o estilo e os componentes.

--- a/index.html
+++ b/index.html
@@ -4,59 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/desktop_style.css">
     <link rel="stylesheet" href="./styles/mobile_style.css">
     
     <title>Nhande Arandú: Da Inteligência Humana à Inteligência Artificial</title>
 </head>
 <body>
+
     <div id="title">
         <div id="top-line"></div>
         <div id="triangle-1" class="triangle deg0"></div>
         <img src="./images/logo.png" alt="logo" id="logo">
         <span>NHANDE ARANDÚ</span>
     </div>
+
     <div id="motto">
         <p>Promover ciência</p>
         <p>= mais ciência.</p>
         <div id="triangle-2" class="triangle deg180"></div>
     </div>
-    <div id="app-preview">
-        <div id="smartphone">
-            <img src="./images/app-screen.png" alt="" id="app-screen">
+
+    <section id="app">
+
+        <div id="triangle-end-app" class="triangle deg0"></div>
+
+        <div id="app-preview">
+            <div id="smartphone">
+                <img src="./images/app-screen.png" alt="" id="app-screen">
+            </div>
         </div>
-    </div>
-    <section id="description">
-        <div id="triangle-3" class="triangle deg0"></div>
-        <span id="app-title">Nhande Arandú:</span>
-        <span id="app-subtitle">Da Inteligência Humana<br>à Inteligência Artificial</span>
-        <br>
-        <p>Esta exposição surge da necessidade e vontade de espalhar o conhecimento científico e tecnológico na educação básica, buscando criar um relacionamento amigável e proveitoso entre jovens estudantes, ciência e tecnologia.<br><br>Para saber mais, baixe nosso aplicativo.<br>É de graça!</p>
-    </section>
-    <section id="download-section">
-        <div id="download-btns">
-            <a href="">
-                <div id="android-download-btn" class="download-btn">
-                    <img src="./images/play-store.png" alt="os-img" class="os-img">
-                        <span>
-                            <p class="download-in-txt">baixar na</p>
-                            <p class="os-store">Play Store</p>
-                        </span>
+
+        <div id="download-app">
+            <section id="description">
+                <div id="triangle-3" class="triangle deg0"></div>
+                <span id="app-title">Nhande Arandú:</span>
+                <span id="app-subtitle">Da Inteligência Humana<br>à Inteligência Artificial</span>
+                <br>
+                <p>Esta exposição surge da necessidade e vontade de espalhar o conhecimento científico e tecnológico na educação básica, buscando criar um relacionamento amigável e proveitoso entre jovens estudantes, ciência e tecnologia.<br><br>Para saber mais, baixe nosso aplicativo.<br>É de graça!</p>
+            </section>
+
+            <section id="download-section">
+                <div id="download-btns">
+                    <a href="">
+                        <div id="android-download-btn" class="download-btn">
+                            <img src="./images/play-store.png" alt="os-img" class="os-img">
+                                <span>
+                                    <p class="download-in-txt">baixar na</p>
+                                    <p class="os-store">Play Store</p>
+                                </span>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div id="ios-download-btn" class="download-btn">
+                            <img src="./images/apple-256.png" alt="os-img" class="os-img">
+                            <span>
+                                <p class="download-in-txt">baixar na</p>
+                                <p class="os-store">App Store</p>
+                            </span>
+                        </div>
+                    </a>
+                </div>    
+                <div id="img-container">
+                    <img src="./images/d-circuit.png" alt="" id="circuit-img">
                 </div>
-            </a>
-            <a href="">
-                <div id="ios-download-btn" class="download-btn">
-                    <img src="./images/apple-256.png" alt="os-img" class="os-img">
-                    <span>
-                        <p class="download-in-txt">baixar na</p>
-                        <p class="os-store">App Store</p>
-                    </span>
-                </div>
-            </a>
-        </div>    
-        <div id="img-container">
-            <img src="./images/d-circuit.png" alt="" id="circuit-img">
+            </section>
         </div>
     </section>
+
     <a href="">
         <p id="privacy-policy">Política de privacidade</p>
     </a>
