refatora as linhas do topo e do fim

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div id="title">
-        <div id="top-line"></div>
+        <div id="top-line" class="decoration-lines"></div>
         <div id="triangle-1" class="triangle deg0"></div>
         <img src="./images/logo.png" alt="logo" id="logo">
         <span>NHANDE ARANDÚ</span>
@@ -76,7 +76,7 @@
     </a>
     <div id="bottom-decoration">
         <div id="bottom-triangle" class="triangle deg180"></div>
-        <div id="bottom-line"></div>
+        <div id="bottom-line" class="decoration-lines"></div>
     </div>
     
 </body>
