add a footer para uso porterior

--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
         </div>
     </section>
 
-    <a href="">
-        <p id="privacy-policy">Política de privacidade</p>
-    </a>
+    <footer id="footer">
+        <a href="">
+            <p id="privacy-policy">Política de privacidade</p>
+        </a>        
+    </footer>
+
     <div id="bottom-decoration">
         <div id="bottom-triangle" class="triangle deg180"></div>
         <div id="bottom-line" class="decoration-lines"></div>
