add: link para os perfils do github nos creditos

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
 
         <div id="credits">
-            <p id="privacy-policy">Feito por Henrique Claranhan e Êxodo Jaffar</p>
+            <p id="privacy-policy">Feito por <a href="https://github.com/henriqueclaranhan">Henrique Claranhan</a> e <a href="https://github.com/exodojaffar">Êxodo Jaffar</a></p>
         </div>
     
 
