add: página Política de Privacidade

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div id="title">
+    <div id="title" class="no-select">
         <div id="top-line" class="decoration-lines"></div>
         <div id="triangle-1" class="triangle deg0"></div>
         <img src="./images/logo.png" alt="logo" id="logo">
@@ -73,8 +73,8 @@
     </section>
 
     <footer id="footer">
-        <a href="">
-            <p id="privacy-policy">Política de privacidade</p>
+        <a href="./pages/privacy-policy.html">
+            <p class="privacy-policy">Política de privacidade</p>
         </a>
 
         <div id="rede-sociais">
@@ -101,7 +101,7 @@
         </div>
 
         <div id="credits">
-            <p id="privacy-policy">Feito por <a href="https://github.com/henriqueclaranhan">Henrique Claranhan</a> e <a href="https://github.com/exodojaffar">Êxodo Jaffar</a></p>
+            <p class="privacy-policy">Feito por <a href="https://github.com/henriqueclaranhan">Henrique Claranhan</a> e <a href="https://github.com/exodojaffar">Êxodo Jaffar</a></p>
         </div>
     
 
