--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="/styles/desktop_style.css">
-    <link rel="stylesheet" href="/styles/mobile_style.css">
-    <link rel="stylesheet" href="/styles/privacy_policy.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/desktop_style.css">
+    <link rel="stylesheet" href="./styles/mobile_style.css">
+    <link rel="stylesheet" href="./styles/privacy_policy.css">
     
     <title>Nhande Arandú | Política de Privacidade</title>
 </head>
