fix: estilização de novo

--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/desktop_style.css">
-    <link rel="stylesheet" href="./styles/mobile_style.css">
-    <link rel="stylesheet" href="./styles/privacy_policy.css">
+    <link rel="stylesheet" href="./../styles/style.css">
+    <link rel="stylesheet" href="./../styles/main.css">
+    <link rel="stylesheet" href="./../styles/desktop_style.css">
+    <link rel="stylesheet" href="./../styles/mobile_style.css">
+    <link rel="stylesheet" href="./../styles/privacy_policy.css">
     
     <title>Nhande Arandú | Política de Privacidade</title>
 </head>
@@ -16,7 +16,7 @@
     <div id="title" class="no-select">
         <div id="top-line" class="decoration-lines"></div>
         <div id="triangle-1" class="triangle deg0"></div>
-        <img src="/images/logo.png" alt="logo" id="logo">
+        <img src="./../images/logo.png" alt="logo" id="logo">
         <span>NHANDE ARANDÚ</span>
     </div>
 
@@ -54,7 +54,7 @@
     </section>
 
     <footer id="footer">
-        <a href="/index.html">
+        <a href="./../index.html">
             <p class="privacy-policy">Página inicial</p>
         </a>
 
