update: estilização do footer

--- a/index.html
+++ b/index.html
@@ -73,10 +73,6 @@
     </section>
 
     <footer id="footer">
-        <a href="./pages/privacy-policy.html">
-            <p class="privacy-policy">Política de privacidade</p>
-        </a>
-
         <div id="rede-sociais">
             <div id="icons">
                 <div class="icon-media">
@@ -99,12 +95,14 @@
                 </div>    
             </div>
         </div>
-
+        <p id="point-1">•</p>
+        <a href="./pages/privacy-policy.html">
+            <p class="privacy-policy">Política de privacidade</p>
+        </a>
+        <p>•</p>
         <div id="credits">
             <p class="privacy-policy">Feito por <a href="https://github.com/henriqueclaranhan">Henrique Claranhan</a> e <a href="https://github.com/exodojaffar">Êxodo Jaffar</a></p>
         </div>
-    
-
     </footer>
 
     <div id="bottom-decoration">
