--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -13,12 +13,15 @@
 </head>
 <body>
 
-    <div id="title" class="no-select">
-        <div id="top-line" class="decoration-lines"></div>
-        <div id="triangle-1" class="triangle deg0"></div>
-        <img src="./../images/logo.png" alt="logo" id="logo">
-        <span>NHANDE ARANDÚ</span>
-    </div>
+    <a href="./../index.html">
+        <div id="title" class="no-select">
+            <div id="top-line" class="decoration-lines"></div>
+            <div id="triangle-1" class="triangle deg0"></div>
+            <img src="./../images/logo.png" alt="logo" id="logo">
+            <span>NHANDE ARANDÚ</span>
+        </div>
+    </a>
+    
 
     <section id="privacy-policy-section">
         <h1>POLÍTICA DE PRIVACIDADE</h1>
@@ -54,10 +57,6 @@
     </section>
 
     <footer id="footer">
-        <a href="./../index.html">
-            <p class="privacy-policy">Página inicial</p>
-        </a>
-
         <div id="rede-sociais">
             <div id="icons">
                 <div class="icon-media">
@@ -80,7 +79,11 @@
                 </div>    
             </div>
         </div>
-
+        <p id="point-1">•</p>
+        <a href="./../index.html">
+            <p class="privacy-policy">Página inicial</p>
+        </a>
+        <p>•</p>
         <div id="credits">
             <p class="privacy-policy">Feito por <a href="https://github.com/henriqueclaranhan">Henrique Claranhan</a> e <a href="https://github.com/exodojaffar">Êxodo Jaffar</a></p>
         </div>
