update: colocar o nome do Diogo nos créditos

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </a>
         <p>•</p>
         <div id="credits">
-            <p class="privacy-policy">Feito por <a href="https://github.com/henriqueclaranhan">Henrique Claranhan</a> e <a href="https://github.com/exodojaffar">Êxodo Jaffar</a></p>
+            <p class="privacy-policy">Feito por <a href="https://github.com/henriqueclaranhan">Henrique Claranhan</a>, <a href="https://github.com/exodojaffar">Êxodo Jaffar e Diogo Careli</a></p>
         </div>
     </footer>
 
