feat: funcionalidade de  mailto link para o email da politica

--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -53,7 +53,7 @@
         <p class="policy-p">
             É possível entrar em contato conosco pelo endereço de e-mail abaixo:
         </p>
-        <p>sdeciencia@gmail.com</p>
+        <p> <a href="mailto:sdeciencia@gmail.com">sdeciencia@gmail.com</a></p>
     </section>
 
     <footer id="footer">
