fix: estilização do preview do app

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/desktop_style.css">
     <link rel="stylesheet" href="./styles/mobile_style.css">
+    <link rel="stylesheet" href="./styles/download_app_modal.css">
     
     <title>Nhande Arandú: Da Inteligência Humana à Inteligência Artificial</title>
 </head>
 <body>
-
     <div id="title" class="no-select">
         <div id="top-line" class="decoration-lines"></div>
         <div id="triangle-1" class="triangle deg0"></div>
@@ -26,7 +26,6 @@
     </div>
 
     <section id="app">
-
         <div id="triangle-end-app" class="triangle deg0"></div>
 
         <div id="app-preview">
@@ -109,6 +108,6 @@
         <div id="bottom-triangle" class="triangle deg180"></div>
         <div id="bottom-line" class="decoration-lines"></div>
     </div>
-    
 </body>
+<script src="./scripts/preview-click.js"></script>
 </html>
