--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/rel-logo.png">
+
+    <meta property="og:title" content="NHANDE ARANDÚ"/>
+    <meta property="og:description" content="Da Inteligência Humana à Inteligência Artificial"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="./images/logo.png"/>
+
+    <meta content="Inteligência Artificial,Ciência, IA, AI, SNCT" http-equiv="keywords">
+
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/desktop_style.css">
