fix: imagem do og:image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="NHANDE ARANDÚ"/>
     <meta property="og:description" content="Da Inteligência Humana à Inteligência Artificial"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="./images/logo.png"/>
+    <meta property="og:image" content="https://github.com/henriqueclaranhan/nhande-arandu-landing-page/blob/main/images/logo.png"/>
 
     <meta content="Inteligência Artificial,Ciência, IA, AI, SNCT" http-equiv="keywords">
 
