add: diálogo modal ao clicar no preview

--- a/index.html
+++ b/index.html
@@ -23,6 +23,26 @@
     <title>Nhande Arandú: Da Inteligência Humana à Inteligência Artificial</title>
 </head>
 <body>
+
+    <div id="download-app-modal">
+        <div id="modal-card">
+            <div id="close-modal" class="no-select">
+                <p>×</p>
+            </div>
+            <img src="./images/alert.png" alt="logo" id="modal-img">
+            <h2>Ooops...</h2>
+            <p>Infelizmente você não pode interagir com o app aqui :(</p>
+            <p>
+                Masss, você pode <strong style="color: rgba(0, 0, 0, 0.733);">baixar o aplicativo</strong> para ter acesso a todo nosso conteúdo, <strong style="color: rgba(0, 0, 0, 0.733);">de graça!</strong> ;)
+            </p>
+            <a href="#download-section">
+                <div id="go-to-download">
+                    <span>Fazer Download</span>
+                </div>
+            </a>
+        </div>
+    </div>
+
     <div id="title" class="no-select">
         <div id="top-line" class="decoration-lines"></div>
         <div id="triangle-1" class="triangle deg0"></div>
