add: tags meta para a página Política de Privacidade

--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./images/rel-logo.png">
+
+    <meta property="og:title" content="NHANDE ARANDÚ | Política de Privacidade"/>
+    <meta property="og:description" content="Política de Privacidade do Nhande Arandú"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://henriqueclaranhan.github.io/nhande-arandu-landing-page/images/logo.png"/>
+    <meta property="og:image:height" content="718"/>
+	<meta property="og:image:width" content="718"/>
+
+    <meta content="Inteligência Artificial,Ciência, IA, AI, SNCT" http-equiv="keywords">
+
     <link rel="stylesheet" href="./../styles/style.css">
     <link rel="stylesheet" href="./../styles/main.css">
     <link rel="stylesheet" href="./../styles/desktop_style.css">
