fix: favicon da página Política de Privacidade

--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/rel-logo.png">
+    <link rel="icon" href="./../images/rel-logo.png">
 
     <meta property="og:title" content="NHANDE ARANDÚ | Política de Privacidade"/>
     <meta property="og:description" content="Política de Privacidade do Nhande Arandú"/>
